--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
+  "homepage": "https://ThoHe19.github.io/my-react-website",
+
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
