--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-portfolio",
+  "name": "my-react-website",
   "version": "0.1.0",
   "homepage": "https://ThoHe19.github.io/my-react-website",
 
