--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "my-react-website",
+  "name": "myreact-website",
   "version": "0.1.0",
   "homepage": "https://ThoHe19.github.io/my-react-website",
-
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +13,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
